fix fonts + several small fixes (list icon, button txt alignment,..)

--- a/app/src/stylesheets/abstraction/_helpers.scss
+++ b/app/src/stylesheets/abstraction/_helpers.scss
@@ -1,6 +1,6 @@
 .nopadding {
-   padding: 0 !important;
-   margin: 0 !important;
+   padding: 0;
+   margin: 0;
 }
 
 .align-right {
