--- a/app/src/stylesheets/components/_button.scss
+++ b/app/src/stylesheets/components/_button.scss
@@ -2,7 +2,7 @@
 	color:white;
 	background-color:#009966;
 	border:0;
-	padding: 10px 12px 10px 12px;
+	padding: 12px 12px 10px 12px;
 	margin-bottom:10px;
 	text-decoration: none;
 	
@@ -22,7 +22,10 @@
 }
 
 .btn{
-	font-weight:bold;
+	font-family: "BNPSansCondensed";
+	font-size: 16px;
+	line-height: 16px;
+	/*font-weight:bold;*/
 	text-transform: uppercase;
 	border: 0;
 	&.white {
