--- a/app/src/stylesheets/components/_more-info.scss
+++ b/app/src/stylesheets/components/_more-info.scss
@@ -1,5 +1,5 @@
 a.more-info {
-	background: url($more-info) no-repeat top 2px left;
+	background: url($more-info) no-repeat top 1px left;
 	padding-left: $icon-space;
 	display:inline-block;
 	font-size: $text-content-height;
